test/sh/error/misc/duplicated_code_block.sk
if true {
	return 1
} {
	return 2
}

return 0
